test/samples/invalid/tc/never_ret.maruir
fun foo(a: u256): never 
{
entry:
	return 0_u256;
}
